WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275458
Crash under WebCore::ScrollableArea::availableContentSizeChanged
https://bugs.webkit.org/show_bug.cgi?id=275458
Summary
Crash under WebCore::ScrollableArea::availableContentSizeChanged
Nikos Mouchtaris
Reported
2024-06-13 15:21:26 PDT
Crash under WebCore::ScrollableArea::availableContentSizeChanged
Attachments
Add attachment
proposed patch, testcase, etc.
Nikos Mouchtaris
Comment 1
2024-06-13 15:22:16 PDT
<
rdar://problem/129621091
>
Nikos Mouchtaris
Comment 2
2024-06-13 15:25:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29795
Nikos Mouchtaris
Comment 3
2024-06-17 19:07:57 PDT
Pull request:
https://github.com/apple/WebKit/pull/1340
EWS
Comment 4
2024-06-21 12:30:55 PDT
Committed
280256@main
(7ce8caf68469): <
https://commits.webkit.org/280256@main
> Reviewed commits have been landed. Closing PR #29795 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug