Crash under WebCore::ScrollableArea::availableContentSizeChanged https://bugs.webkit.org/show_bug.cgi?id=275458 rdar://129621091

Reviewed by Tim Horton.

Add a call to the default scrollbars creator if page is null in
LocalFrameView::createScrollbarsController. Also add a release assert to
catch any cases of this in the future.

* Source/WebCore/page/LocalFrameView.cpp:
(WebCore::LocalFrameView::createScrollbarsController):
* Source/WebCore/platform/ScrollableArea.cpp:
(WebCore::ScrollableArea::scrollbarsController const):

Canonical link: https://commits.webkit.org/280256@main